added welcome#index page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,9 +4,10 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
-#main-container{
-  padding-top: 48px;
+.jumbotron {
+  width: 100%;
 }
+
 
 /* Sticky footer styles
 -------------------------------------------------- */
